yoshimi 2.3.5.3

2026-02-5 Will
bn 2417
Included Improved Crossfade from Kristian.
Updated dev_notes.

2026-01-17 Will
bn 2416
Changing partlevel controls are no longer marked as instriment changed.

2026-01-17 Will
bn 2415
SubSynth bandwidth scale drawing no longer uses cairo
(although the original code has been kept but disabled)
Minor adjustments also made to graph line widths and colours.

2025-12-27 Will
bn 2414
Merged in Jespers cario-fltk1.4 / Wayland patch

2025-12-20 Will
bn 2412
Set version 2.3.5.3
Formal release of XML V3/V4 identification.

2025-12-14 Hermann
bn 2411
Provide code variant to support MXML v4 in src/Misc/XMLStore.cpp
Builds upon the rework of XML handling from 2025-6-1 (bn 2387).

2025-11-06 Will
bn 2410
Permanently removed (apparently) redunant code in UI/WidgetCheckButton.cpp
Set version 2.3.5.2

2025-10-20 Will
bn 2409
Added SubSynth LFOs to CLI access.

2025-9-29 Will
bn 2408
BugFix: Banks not showing Yoshimi type instrument colour.
BugFix: Off by 1 errors in CLI - envelope code.
Set bugfix version 2.3.5.1

2025-9-27 Will
bn 2407
Replaced rotary knob change with improved version from Jesper.

2025-9-26 Will
bn 2406
Some final cleanups and doc. updates.
Set release version 2.3.5

2025-9-25 Will
bn 2405
Corrected rotary knob scaling for fltk 1.4
Bugfix: not showing correct colour for yoshimi instruments.
set version as 2.3.5 rc3

2025-9-21 Will
bn 2403
BugFix: Main window top controls partially obscured.

2025-9-18 Will
bn 2402
Final preparations for the next release.
Updated docs.

2025-9-17 Will
bn 2400
Made small adjustments to tooltip sizes.
Min. is 12 point, and large sizes track a bit better.

2025-9-3 Will
bn 2399
Merged in SubSynth LFO work from Kristian
Adjusted Mixer panel VU limits for FLTK 1.4.x compatibility.
Updated User Guide.

2025-8-30 Will
bn 2398
Added missing include file to LV2 cmake file

2025-8-27 Jesper
bn 2397
Adjusted tooltip positioning to handle cursor placements close to bottom of screen.

2025-8-27 Will