@@ -650,21 +650,21 @@ namespace PART // usage PART::control::volume
         partToSystemEffect2,
         partToSystemEffect3,
         partToSystemEffect4,
-        kitItemMute = 25, // last not marked as instrument changed
-        enableKitLine,
+        kitItemMute,
+        enableKitLine = 32, // first marked as instrument changed
         enableAdd,
         enableSub,
         enablePad,
         keyMode,
         channelATset,
         keyATset,
-        effectNumber = 40,
         portamento,
-        humanise = 50,
+        humanise,
         humanvelocity,
-        drumMode = 57,
+        drumMode,
         kitMode,
-        kitEffectNum = 64,
+        effectNumber = 64,
+        kitEffectNum,
         effectType,
         effectDestination,
         effectBypass,
